* function for making data points visible * enhanced visuals for slider and graph * deletion fix

--- a/de.bund.bfr.knime.pmm.predictorview/js-src/de/bund/bfr/knime/pmm/js/modelplotter/jquery-ui.structure.css
+++ b/de.bund.bfr.knime.pmm.predictorview/js-src/de/bund/bfr/knime/pmm/js/modelplotter/jquery-ui.structure.css
@@ -672,6 +672,10 @@ button.ui-button::-moz-focus-inner {
 	cursor: default;
 	-ms-touch-action: none;
 	touch-action: none;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 .ui-slider .ui-slider-range {
 	position: absolute;
